@@ -3,19 +3,20 @@ package com.duoc.ms_usuarios;
 import com.duoc.ms_usuarios.model.Usuario;
 import com.duoc.ms_usuarios.repository.UsuarioRepository;
 import com.duoc.ms_usuarios.service.UsuarioService;
+import jakarta.persistence.EntityNotFoundException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
+@DisplayName("Pruebas Unitarias - UsuarioService")
 class UsuarioServiceTest {
 
     private UsuarioRepository usuarioRepository;
@@ -28,40 +29,39 @@ class UsuarioServiceTest {
         usuarioRepository = mock(UsuarioRepository.class);
         passwordEncoder = new BCryptPasswordEncoder();
         usuarioService = new UsuarioService(usuarioRepository, passwordEncoder);
+
         usuarioBase = new Usuario();
         usuarioBase.setId(1L);
         usuarioBase.setNombre("Juan");
         usuarioBase.setApellido("Pérez");
         usuarioBase.setEmail("juan@mail.com");
+        usuarioBase.setTelefono("+56 9 1234 5678");
         usuarioBase.setUsername("juan123");
         usuarioBase.setPassword("miPasswordSegura125");
         usuarioBase.setRol("USER");
+        usuarioBase.setActivo(true);
     }
 
-    // =========================================================
-    // 1. PRUEBAS PARA: listar()
-    // =========================================================
-
     @Test
-    @DisplayName("Debería retornar una lista con todos los usuarios")
+    @DisplayName("listar() debe retornar todos los usuarios")
     void testListar_retornaUsuarios() {
-        when(usuarioRepository.findAll()).thenReturn(Arrays.asList(usuarioBase));
+        when(usuarioRepository.findAll())
+                .thenReturn(List.of(usuarioBase));
 
         List<Usuario> resultado = usuarioService.listar();
 
         assertNotNull(resultado);
         assertEquals(1, resultado.size());
         assertEquals("juan123", resultado.get(0).getUsername());
+
+        verify(usuarioRepository, times(1)).findAll();
     }
 
-    // =========================================================
-    // 2. PRUEBAS PARA: buscarPorId()
-    // =========================================================
-
     @Test
-    @DisplayName("Buscar ID existente debe retornar el Usuario")
+    @DisplayName("buscarPorId() con ID existente debe retornar usuario")
     void testBuscarPorId_encontrado() {
-        when(usuarioRepository.findById(1L)).thenReturn(Optional.of(usuarioBase));
+        when(usuarioRepository.findById(1L))
+                .thenReturn(Optional.of(usuarioBase));
 
         Usuario resultado = usuarioService.buscarPorId(1L);
 
@@ -70,23 +70,21 @@ class UsuarioServiceTest {
     }
 
     @Test
-    @DisplayName("Buscar ID inexistente debe retornar null (Camino .orElse(null))")
+    @DisplayName("buscarPorId() con ID inexistente debe lanzar EntityNotFoundException")
     void testBuscarPorId_noEncontrado() {
-        when(usuarioRepository.findById(99L)).thenReturn(Optional.empty());
+        when(usuarioRepository.findById(99L))
+                .thenReturn(Optional.empty());
 
-        Usuario resultado = usuarioService.buscarPorId(99L);
-
-        assertNull(resultado);
+        assertThrows(EntityNotFoundException.class, () ->
+                usuarioService.buscarPorId(99L)
+        );
     }
 
-    // =========================================================
-    // 3. PRUEBAS PARA: buscarPorUsername()
-    // =========================================================
-
     @Test
-    @DisplayName("Buscar Username existente debe retornar el Usuario")
+    @DisplayName("buscarPorUsername() existente debe retornar usuario")
     void testBuscarPorUsername_encontrado() {
-        when(usuarioRepository.findByUsername("juan123")).thenReturn(Optional.of(usuarioBase));
+        when(usuarioRepository.findByUsername("juan123"))
+                .thenReturn(Optional.of(usuarioBase));
 
         Usuario resultado = usuarioService.buscarPorUsername("juan123");
 
@@ -95,117 +93,273 @@ class UsuarioServiceTest {
     }
 
     @Test
-    @DisplayName("Buscar Username inexistente debe retornar null")
+    @DisplayName("buscarPorUsername() inexistente debe lanzar EntityNotFoundException")
     void testBuscarPorUsername_noEncontrado() {
-        when(usuarioRepository.findByUsername("fantasma")).thenReturn(Optional.empty());
+        when(usuarioRepository.findByUsername("fantasma"))
+                .thenReturn(Optional.empty());
 
-        Usuario resultado = usuarioService.buscarPorUsername("fantasma");
-
-        assertNull(resultado);
+        assertThrows(EntityNotFoundException.class, () ->
+                usuarioService.buscarPorUsername("fantasma")
+        );
     }
 
-    // =========================================================
-    // 4. PRUEBAS PARA: guardar()
-    // =========================================================
-
     @Test
-    @DisplayName("Guardar usuario con password válido debe encriptarla con BCrypt")
+    @DisplayName("guardar() con password válido debe encriptar y guardar")
     void testGuardar_conPassword_encriptaYGuarda() {
-        when(usuarioRepository.save(any(Usuario.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        when(usuarioRepository.save(any(Usuario.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
 
         Usuario guardado = usuarioService.guardar(usuarioBase);
 
         assertNotNull(guardado);
-        assertTrue(guardado.getPassword().startsWith("$2a$") || guardado.getPassword().startsWith("$2b$"));
+        assertTrue(
+                guardado.getPassword().startsWith("$2a$") ||
+                        guardado.getPassword().startsWith("$2b$")
+        );
         assertTrue(passwordEncoder.matches("miPasswordSegura125", guardado.getPassword()));
+        assertEquals("USER", guardado.getRol());
+        assertTrue(guardado.getActivo());
     }
 
     @Test
-    @DisplayName("Guardar usuario con password vacía o nula no debe encriptar")
+    @DisplayName("guardar() con password vacía no debe encriptar")
     void testGuardar_passwordVacia_noEncripta() {
         usuarioBase.setPassword("   ");
-        when(usuarioRepository.save(any(Usuario.class))).thenAnswer(invocation -> invocation.getArgument(0));
+
+        when(usuarioRepository.save(any(Usuario.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
 
         Usuario guardado = usuarioService.guardar(usuarioBase);
 
         assertEquals("   ", guardado.getPassword());
     }
 
-    // =========================================================
-    // 5. PRUEBAS PARA: actualizar()
-    // =========================================================
+    @Test
+    @DisplayName("guardar() asigna rol USER y activo true si vienen nulos")
+    void testGuardar_asignaDefaults() {
+        usuarioBase.setRol(null);
+        usuarioBase.setActivo(null);
+
+        when(usuarioRepository.save(any(Usuario.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+
+        Usuario guardado = usuarioService.guardar(usuarioBase);
+
+        assertEquals("USER", guardado.getRol());
+        assertTrue(guardado.getActivo());
+    }
 
     @Test
-    @DisplayName("Actualizar usuario existente modificando password debe guardarlo encriptado")
-    void testActualizar_usuarioExiste_conNuevaPassword() {
+    @DisplayName("actualizar() como ADMIN debe modificar datos, teléfono, rol y password")
+    void testActualizar_admin_conNuevaPassword() {
         Usuario datosNuevos = new Usuario();
         datosNuevos.setNombre("Carlos");
         datosNuevos.setApellido("Soto");
         datosNuevos.setEmail("carlos@mail.com");
+        datosNuevos.setTelefono("+56 9 9999 9999");
         datosNuevos.setRol("ADMIN");
         datosNuevos.setPassword("nuevaClave");
 
-        when(usuarioRepository.findById(1L)).thenReturn(Optional.of(usuarioBase));
-        when(usuarioRepository.save(any(Usuario.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        when(usuarioRepository.findById(1L))
+                .thenReturn(Optional.of(usuarioBase));
 
-        Usuario modificado = usuarioService.actualizar(1L, datosNuevos);
+        when(usuarioRepository.save(any(Usuario.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+
+        Usuario modificado = usuarioService.actualizar(1L, datosNuevos, 99L, "ADMIN");
 
         assertNotNull(modificado);
         assertEquals("Carlos", modificado.getNombre());
+        assertEquals("Soto", modificado.getApellido());
+        assertEquals("carlos@mail.com", modificado.getEmail());
+        assertEquals("+56 9 9999 9999", modificado.getTelefono());
         assertEquals("ADMIN", modificado.getRol());
         assertTrue(passwordEncoder.matches("nuevaClave", modificado.getPassword()));
     }
 
     @Test
-    @DisplayName("Actualizar usuario existente SIN cambiar password mantiene la original")
-    void testActualizar_usuarioExiste_sinPassword() {
+    @DisplayName("actualizar() sin password mantiene la password original")
+    void testActualizar_sinPassword_mantieneOriginal() {
         Usuario datosNuevos = new Usuario();
         datosNuevos.setNombre("Carlos");
+        datosNuevos.setApellido("Soto");
+        datosNuevos.setEmail("carlos@mail.com");
+        datosNuevos.setTelefono("+56 9 1111 1111");
+        datosNuevos.setRol("USER");
         datosNuevos.setPassword("");
 
         String passwordOriginal = usuarioBase.getPassword();
 
-        when(usuarioRepository.findById(1L)).thenReturn(Optional.of(usuarioBase));
-        when(usuarioRepository.save(any(Usuario.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        when(usuarioRepository.findById(1L))
+                .thenReturn(Optional.of(usuarioBase));
 
-        Usuario modificado = usuarioService.actualizar(1L, datosNuevos);
+        when(usuarioRepository.save(any(Usuario.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+
+        Usuario modificado = usuarioService.actualizar(1L, datosNuevos, 99L, "ADMIN");
 
         assertEquals(passwordOriginal, modificado.getPassword());
+        assertEquals("Carlos", modificado.getNombre());
     }
 
     @Test
-    @DisplayName("Actualizar usuario que no existe debe retornar null")
+    @DisplayName("actualizar() usuario común solo puede actualizar su propia cuenta y no cambia rol")
+    void testActualizar_usuarioComun_suPropiaCuenta_noCambiaRol() {
+        usuarioBase.setRol("USER");
+
+        Usuario datosNuevos = new Usuario();
+        datosNuevos.setNombre("Juan Actualizado");
+        datosNuevos.setApellido("Pérez");
+        datosNuevos.setEmail("nuevo@mail.com");
+        datosNuevos.setTelefono("+56 9 2222 2222");
+        datosNuevos.setRol("ADMIN");
+
+        when(usuarioRepository.findById(1L))
+                .thenReturn(Optional.of(usuarioBase));
+
+        when(usuarioRepository.save(any(Usuario.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+
+        Usuario modificado = usuarioService.actualizar(1L, datosNuevos, 1L, "USER");
+
+        assertEquals("Juan Actualizado", modificado.getNombre());
+        assertEquals("USER", modificado.getRol());
+    }
+
+    @Test
+    @DisplayName("actualizar() usuario común no puede actualizar otra cuenta")
+    void testActualizar_usuarioComun_otraCuenta_lanzaError() {
+        Usuario datosNuevos = new Usuario();
+        datosNuevos.setNombre("Otro");
+        datosNuevos.setRol("USER");
+
+        when(usuarioRepository.findById(2L))
+                .thenReturn(Optional.of(usuarioBase));
+
+        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class, () ->
+                usuarioService.actualizar(2L, datosNuevos, 1L, "USER")
+        );
+
+        assertEquals("No tienes permisos para actualizar este usuario.", ex.getMessage());
+    }
+
+    @Test
+    @DisplayName("actualizar() no permite quitarse ADMIN a sí mismo")
+    void testActualizar_adminNoPuedeQuitarseSuRol() {
+        usuarioBase.setRol("ADMIN");
+
+        Usuario datosNuevos = new Usuario();
+        datosNuevos.setNombre("Admin");
+        datosNuevos.setApellido("Principal");
+        datosNuevos.setEmail("admin@mail.com");
+        datosNuevos.setRol("USER");
+
+        when(usuarioRepository.findById(1L))
+                .thenReturn(Optional.of(usuarioBase));
+
+        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class, () ->
+                usuarioService.actualizar(1L, datosNuevos, 1L, "ADMIN")
+        );
+
+        assertEquals("No puedes quitarte el rol ADMIN a tu propia cuenta.", ex.getMessage());
+    }
+
+    @Test
+    @DisplayName("actualizar() no permite quitar ADMIN al último administrador")
+    void testActualizar_noPuedeQuitarUltimoAdmin() {
+        usuarioBase.setRol("ADMIN");
+
+        Usuario datosNuevos = new Usuario();
+        datosNuevos.setNombre("Admin");
+        datosNuevos.setApellido("Principal");
+        datosNuevos.setEmail("admin@mail.com");
+        datosNuevos.setRol("USER");
+
+        when(usuarioRepository.findById(1L))
+                .thenReturn(Optional.of(usuarioBase));
+
+        when(usuarioRepository.countByRol("ADMIN"))
+                .thenReturn(1L);
+
+        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class, () ->
+                usuarioService.actualizar(1L, datosNuevos, 99L, "ADMIN")
+        );
+
+        assertEquals("No puedes quitar el rol ADMIN al último administrador del sistema.", ex.getMessage());
+    }
+
+    @Test
+    @DisplayName("actualizar() usuario inexistente debe lanzar EntityNotFoundException")
     void testActualizar_usuarioNoExiste() {
-        when(usuarioRepository.findById(1L)).thenReturn(Optional.empty());
+        when(usuarioRepository.findById(1L))
+                .thenReturn(Optional.empty());
 
-        Usuario modificado = usuarioService.actualizar(1L, usuarioBase);
-
-        assertNull(modificado);
+        assertThrows(EntityNotFoundException.class, () ->
+                usuarioService.actualizar(1L, usuarioBase, 99L, "ADMIN")
+        );
     }
 
-    // =========================================================
-    // 6. PRUEBAS PARA: eliminar()
-    // =========================================================
-
     @Test
-    @DisplayName("Eliminar usuario que existe debe retornar true y borrar")
+    @DisplayName("eliminar() usuario existente debe retornar true")
     void testEliminar_existe_retornaTrue() {
-        when(usuarioRepository.existsById(1L)).thenReturn(true);
+        Usuario usuarioAEliminar = new Usuario();
+        usuarioAEliminar.setId(2L);
+        usuarioAEliminar.setRol("USER");
 
-        boolean eliminado = usuarioService.eliminar(1L);
+        when(usuarioRepository.findById(2L))
+                .thenReturn(Optional.of(usuarioAEliminar));
+
+        boolean eliminado = usuarioService.eliminar(2L, 1L);
 
         assertTrue(eliminado);
-        verify(usuarioRepository, times(1)).deleteById(1L);
+        verify(usuarioRepository, times(1)).delete(usuarioAEliminar);
     }
 
     @Test
-    @DisplayName("Eliminar usuario que NO existe debe retornar false")
-    void testEliminar_noExiste_retornaFalse() {
-        when(usuarioRepository.existsById(99L)).thenReturn(false);
+    @DisplayName("eliminar() no permite eliminar la propia cuenta")
+    void testEliminar_propiaCuenta_lanzaError() {
+        when(usuarioRepository.findById(1L))
+                .thenReturn(Optional.of(usuarioBase));
 
-        boolean eliminado = usuarioService.eliminar(99L);
+        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class, () ->
+                usuarioService.eliminar(1L, 1L)
+        );
 
-        assertFalse(eliminado);
-        verify(usuarioRepository, never()).deleteById(anyLong());
+        assertEquals("No puedes eliminar tu propia cuenta.", ex.getMessage());
+        verify(usuarioRepository, never()).delete(any(Usuario.class));
+    }
+
+    @Test
+    @DisplayName("eliminar() no permite eliminar al último administrador")
+    void testEliminar_ultimoAdmin_lanzaError() {
+        Usuario admin = new Usuario();
+        admin.setId(2L);
+        admin.setRol("ADMIN");
+
+        when(usuarioRepository.findById(2L))
+                .thenReturn(Optional.of(admin));
+
+        when(usuarioRepository.countByRol("ADMIN"))
+                .thenReturn(1L);
+
+        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class, () ->
+                usuarioService.eliminar(2L, 1L)
+        );
+
+        assertEquals("No puedes eliminar al último administrador del sistema.", ex.getMessage());
+        verify(usuarioRepository, never()).delete(any(Usuario.class));
+    }
+
+    @Test
+    @DisplayName("eliminar() usuario inexistente debe lanzar EntityNotFoundException")
+    void testEliminar_noExiste_lanzaError() {
+        when(usuarioRepository.findById(99L))
+                .thenReturn(Optional.empty());
+
+        assertThrows(EntityNotFoundException.class, () ->
+                usuarioService.eliminar(99L, 1L)
+        );
+
+        verify(usuarioRepository, never()).delete(any(Usuario.class));
     }
 }
